--- a/index.html
+++ b/index.html
@@ -274,8 +274,8 @@
 					<div class="single-banner">
 						<img src="./images/3.jpg" alt="#">
 						<div class="content">
-							<p>Man's Collectons</p>
-							<h3>Summer travel <br> collection</h3>
+							<p>Electric Bikes</p>
+							<h3> Save earth! <br> collection</h3>
 							<a href="#">Discover Now</a>
 						</div>
 					</div>
@@ -286,8 +286,8 @@
 					<div class="single-banner">
 						<img src="./images/4.jpg" alt="#">
 						<div class="content">
-							<p>Bag Collectons</p>
-							<h3>Awesome Bag <br> 2020</h3>
+							<p>Moto Bikes</p>
+							<h3>Be Awesome <br> 2020</h3>
 							<a href="#">Shop Now</a>
 						</div>
 					</div>
