--- a/index.html
+++ b/index.html
@@ -151,21 +151,21 @@
 									<ul class="shopping-list">
 										<li>
 											<a href="#" class="remove" title="Remove this item"><i class="fa fa-remove"></i></a>
-											<a class="cart-img" href="#"><img src="https://via.placeholder.com/70x70" alt="#"></a>
+											<a class="cart-img" href="#"><img src="images/14.png" alt="#"></a>
 											<h4><a href="#">Enduro 250/a></h4>
-											<p class="quantity">1x - <span class="amount">$99.00</span></p>
+											<p class="quantity">1x - <span class="amount">$3250.00</span></p>
 										</li>
 										<li>
 											<a href="#" class="remove" title="Remove this item"><i class="fa fa-remove"></i></a>
-											<a class="cart-img" href="#"><img src="https://via.placeholder.com/70x70" alt="#"></a>
+											<a class="cart-img" href="#"><img src="images/14.png" alt="#"></a>
 											<h4><a href="#">Enduro 550</a></h4>
-											<p class="quantity">1x - <span class="amount">$35.00</span></p>
+											<p class="quantity">1x - <span class="amount">$7600.00</span></p>
 										</li>
 									</ul>
 									<div class="bottom">
 										<div class="total">
 											<span>Total</span>
-											<span class="total-amount">$134.00</span>
+											<span class="total-amount">$10850.00</span>
 										</div>
 										<a href="checkout.html" class="btn animate">Checkout</a>
 									</div>
@@ -535,7 +535,7 @@
 						<img src="./images/0.jpg" alt="#">
 						<div class="content">
 							<p class="date">22 July , 2020. Monday</p>
-							<a href="#" class="title">See kids too can have fun!.</a>
+							<a href="#" class="title">kids too can have fun with DirtBikes's!.</a>
 							<a href="#" class="more-btn">Continue Reading</a>
 						</div>
 					</div>
