--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 									<ul class="shopping-list">
 										<li>
 											<a href="#" class="remove" title="Remove this item"><i class="fa fa-remove"></i></a>
-											<a class="cart-img" href="#"><img src="images/14.png" alt="#"></a>
+											<a class="cart-img" href="#"><img src="images/13.jpeg" alt="#"></a>
 											<h4><a href="#">Enduro 250 </a></h4>
 											<p class="quantity">1x - <span class="amount">$3250.00</span></p>
 										</li>
