--- a/index.html
+++ b/index.html
@@ -547,7 +547,7 @@
 						<img src="./images/9.jpg" alt="#">
 						<div class="content">
 							<p class="date">22 July, 2020. Monday</p>
-							<a href="#" class="title">Dominate the road with Dirt Bikes Moto 450</a>
+							<a href="#" class="title">Dominate with Dirt Bikes Moto 450</a>
 							<a href="#" class="more-btn">Continue Reading</a>
 						</div>
 					</div>
